--- a/style.css
+++ b/style.css
@@ -138,6 +138,16 @@ nav {
           align-items: center;
 }
 
+p {
+  margin-top: 1em;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.block {
+  width: 40%;
+}
+
 .volunteering {
   height: 45em;
   width: auto;
@@ -207,6 +217,14 @@ button {
   }
   button {
     text-align: center;
+  }
+  p {
+    text-align: center;
+    font-size: 13px;
+  }
+  .block {
+    width: 2em;
+    height: 2em;
   }
 }
 /*# sourceMappingURL=style.css.map */
