--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ button {
   background: gold;
   font-size: 16px;
   margin-top: 2em;
+  cursor:pointer;
 }
 
 @media only screen and (max-width: 500px) {
